# Financial_Document_Intelligence

./: .dockerignore  Dockerfile  README.md  app.py  db.py  docker-compose.yml  main.py  pyproject.toml
agents/: analysis_agent.py  memory_agent.py  orchestrator_agent.py  retrieval_agent.py  tools.py
config/: model_config.py  model_factory.py
models/: chunk_embedding.py  dashboard_metric.py  document.py  document_chunk.py  document_summary.py  insight.py  message.py  processing_status.py  query_session.py  report.py  saved_query.py  session_summary.py  upload_session.py  user.py
routers/: agent_router.py  chunk_embedding.py  dashboard_metric.py  document.py  document_chunk.py  document_summary.py  insight.py  message.py  processing_status.py  query_session.py  report.py  saved_query.py  session_summary.py  upload_session.py  user.py
schemas/: agent_schema.py  chunk_embedding.py  dashboard_metric.py  document.py  document_chunk.py  document_summary.py  insight.py  message.py  processing_status.py  query_session.py  report.py  saved_query.py  session_summary.py  upload_session.py  user.py
services/: agent_service.py  chunk_embedding_service.py  comparison_service.py  dashboard_metric_service.py  document_chunk_service.py  document_classifier_service.py  document_service.py  document_summary_service.py  insight_service.py  message_service.py  metric_extraction_service.py  metric_normalization_service.py  ocr_service.py  processing_status_service.py  query_session_service.py  report_service.py  saved_query_service.py  session_summary_service.py  user_service.py  (+2 more)
(+7 files in other folders)
