[project]
name = "docintelli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "camelot-py>=1.0.9",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.5.0",
    "passlib>=1.7.4",
    "pdf2image>=1.17.0",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
